# protondb-check

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: rust.yml
src/: args.rs  main.rs  structs.rs  utils.rs
