[package]
name = "protondb-check"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "CLI tool for checking ProtonDB rating of your Steam games."
authors = ["Giorgi Anakidze <giorgi.anakidze@outlook.com>"]
repository = "https://github.com/gpskwlkr/protondb-check"

[profile.release]
lto = true
opt-level = 'z'
panic = 'unwind'
codegen-units = 1
incremental = false

[dependencies]
itertools = "0.12.1"
reqwest = { version = "0.12.2", features = ["blocking"]}
serde = { version = "1.0.197", features = ["derive"]}
serde-xml-rs = "0.6.0"
serde_json = "1.0.115"
terminal-menu = "3.0.0"

[package.metadata.docs.rs]
all-features=true

[[bin]]
name = "protondb-check"
path = "src/main.rs"
